force-app/main/default/objects/Opportunity/fields/BDR_Rep__c.field-meta.xml
<CustomField>
    <fullName>BDR_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-459: When the Sales Rep accepts the opportunity, this field is set to the BDR rep.</description>
    <label>BDR Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BDR_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>