force-app/main/default/objects/Opportunity/fields/Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Postal_Code__c</fullName>
    <description>RUBX-3907 : Refers Zip/Postal Code of address record selected as Bill-To</description>
    <formula>Bill_To__r.Zip_Postal_Code__c</formula>
    <label>Billing Zip/Postal Code</label>
    <type>Text</type>
</CustomField>