force-app/main/default/objects/Opportunity/fields/CAT_Logging_Stage__c.field-meta.xml
<CustomField>
    <fullName>CAT_Logging_Stage__c</fullName>
    <description>RUBX-1023 : Select stage describing what point during the CAT review process, CAT review must be complete before Opportunity Closed won</description>
    <inlineHelpText>Select stage describing what point during the CAT review process, CAT review must be complete before Opportunity Closed won</inlineHelpText>
    <label>CAT Logging Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting CAT Review</fullName>
            </value>
            <value>
                <fullName>CAT Review In Progress</fullName>
            </value>
            <value>
                <fullName>CAT Review Complete</fullName>
            </value>
            <value>
                <fullName>CAT Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>