force-app/main/default/objects/Opportunity/fields/Challenges_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Challenges_Barriers__c</fullName>
    <description>RUBX-464: Vision/Value framework</description>
    <inlineHelpText>What are the challenges/barriers keeping them from achieving this vision today?</inlineHelpText>
    <label>Challenges/Barriers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>