force-app/main/default/objects/Opportunity/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-1544: Identify Coach in SS2</description>
    <label>Coach</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>