force-app/main/default/objects/Opportunity/fields/Coach_admits_pain__c.field-meta.xml
<CustomField>
    <fullName>Coach_admits_pain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-1544: Identify Coach in SS2</description>
    <label>Coach admits pain</label>
    <type>Checkbox</type>
</CustomField>