force-app/main/default/objects/Opportunity/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <description>RUBX-464: Vision/Value framework</description>
    <inlineHelpText>What is the compelling event that makes now the right time to act?</inlineHelpText>
    <label>Compelling Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>