force-app/main/default/objects/Opportunity/fields/Deal_Category__c.field-meta.xml
<CustomField>
        <fullName>Deal_Category__c</fullName>
        <label>Deal Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100% New/Incremental Rev</fullName>
                </value>
                <value>
                    <fullName>Contains some element of existing rev (RLF/ACV)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>