force-app/main/default/objects/Opportunity/fields/Finastra_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Finastra_Forecast__c</fullName>
    <description>RUBX-453 : Field to capture Finastra Forecast</description>
    <label>Finastra Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Omitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>