force-app/main/default/objects/Opportunity/fields/Growth_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Growth_Strategy__c</fullName>
    <description>RUBX-464: Vision/Value framework</description>
    <inlineHelpText>What is the client’s growth strategy over the next 12-36 months?</inlineHelpText>
    <label>Growth Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>