force-app/main/default/objects/Opportunity/fields/GS_Delivery_Captain__c.field-meta.xml
<CustomField>
        <fullName>GS_Delivery_Captain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GS Delivery Captain</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </CustomField>