force-app/main/default/objects/Opportunity/fields/GSC_Comments__c.field-meta.xml
<CustomField>
    <fullName>GSC_Comments__c</fullName>
    <description>RUBX-532 - Field to capture GSC Comments value</description>
    <inlineHelpText>Any comments from Global Solution Consultants team</inlineHelpText>
    <label>GSC Comments</label>
    <type>TextArea</type>
</CustomField>