force-app/main/default/objects/Opportunity/fields/GSC_Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>GSC_Engagement_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-532 - Field to capture GSC Team Lead value</description>
    <inlineHelpText>GSC Team Lead for the opportunity</inlineHelpText>
    <label>GSC Engagement Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>