force-app/main/default/objects/Opportunity/fields/GSC_RFI__c.field-meta.xml
<CustomField>
    <fullName>GSC_RFI__c</fullName>
    <description>RUBX-532 - Field to capture GSC RFI value</description>
    <inlineHelpText>Select &quot;Requested&quot; if you require help with an RFI and enter date needed by and your local GSC team will be in touch with you</inlineHelpText>
    <label>GSC RFI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>