force-app/main/default/objects/Opportunity/fields/Main_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Main_Competitor__c</fullName>
    <description>RUBX-693 : Field to capture Main competitor</description>
    <label>Main Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitor_Values</valueSetName>
    </valueSet>
</CustomField>