force-app/main/default/objects/Opportunity/fields/Main_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Main_Product_Family__c</fullName>
    <description>Formula field to show the B,T,S family in the Main Product Field. It will show Other if no match</description>
    <formula>IF(CONTAINS( TEXT(MainProduct__c) , &quot;(B)&quot;), &quot;(B)&quot;, 
IF(CONTAINS( TEXT(MainProduct__c), &quot;(T)&quot;),&quot;(T)&quot;,
IF(CONTAINS( TEXT(MainProduct__c), &quot;(S)&quot;),&quot;(S)&quot;,
&quot;Other&quot;)))</formula>
    <inlineHelpText>Main Product family Group (B),(T),(S) or Other</inlineHelpText>
    <label>Main Product Family</label>
    <type>Text</type>
</CustomField>