force-app/main/default/objects/Opportunity/fields/MainProduct__c.field-meta.xml
<CustomField>
    <fullName>MainProduct__c</fullName>
    <description>used in Licence Compliance process to identify for which particular product the audit was done. Oliver 17/07/12</description>
    <label>Main Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Main_Product</valueSetName>
    </valueSet>
</CustomField>