force-app/main/default/objects/Opportunity/fields/Migrated_Renewal__c.field-meta.xml
<CustomField>
        <fullName>Migrated_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be set on Contracts that have been renewed from a Migrated Contract.  This field is twinned from the contract.</description>
        <inlineHelpText>This field will be set to true when this opportunity was created from a Migrated Contract.</inlineHelpText>
        <label>Migrated Renewal</label>
        <type>Checkbox</type>
    </CustomField>