force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>RUBX-453 : Opportunity number to uniquely identify opportunity</description>
    <displayFormat>ON{00000}</displayFormat>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>