force-app/main/default/objects/Opportunity/fields/Other_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Other_Competitors__c</fullName>
    <description>RUBX-694 : List of all the Finastra Competitors</description>
    <label>Other Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitor_Values</valueSetName>
    </valueSet>
</CustomField>