force-app/main/default/objects/Opportunity/fields/Overarching_business_vision__c.field-meta.xml
<CustomField>
    <fullName>Overarching_business_vision__c</fullName>
    <description>RUBX-464: Vision/Value framework</description>
    <inlineHelpText>What is the client’s overarching business vision?</inlineHelpText>
    <label>Overarching business vision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>