force-app/main/default/objects/Opportunity/fields/Power_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Power_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-1543: Identify Power sponsor in SS3</description>
    <label>Power Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Power Sponsor)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>