force-app/main/default/objects/Opportunity/fields/Power_Sponsor_admits_pain__c.field-meta.xml
<CustomField>
    <fullName>Power_Sponsor_admits_pain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-1543: Identify Power sponsor in SS3</description>
    <label>Power Sponsor admits pain</label>
    <type>Checkbox</type>
</CustomField>