force-app/main/default/objects/Opportunity/fields/Pricing_Country__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Country__c</fullName>
    <description>RUBX-453 : Field to capture pricing country</description>
    <label>Pricing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>