force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>RUBX-512 : Field to capture Region</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regions</valueSetName>
    </valueSet>
</CustomField>