force-app/main/default/objects/Opportunity/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>RUBX-457: Sales Rep select the Rejection Reason of BDR Opportunity</description>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shape fit</fullName>
            </value>
            <value>
                <fullName>Product fit</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Finastra reputation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>