force-app/main/default/objects/Opportunity/fields/RFI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RFI_Due_Date__c</fullName>
    <description>RUBX-532 - Field to capture GSC RFI  Due Date</description>
    <inlineHelpText>Select the date by which RFI response is required from GSC team</inlineHelpText>
    <label>RFI Due Date</label>
    <type>Date</type>
</CustomField>