force-app/main/default/objects/Opportunity/fields/Sales_Rep_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Assignment_Status__c</fullName>
    <description>RUBX-456: Sales Rep Assignment Status</description>
    <label>Sales Rep Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Assigned</fullName>
                <default>true</default>
                <label>Not Assigned</label>
            </value>
            <value>
                <fullName>Pending Assignment</fullName>
            </value>
            <value>
                <fullName>Pending Assignment (Overdue)</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>