force-app/main/default/objects/Opportunity/fields/SBU_Strategic_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>SBU_Strategic_Business_Unit__c</fullName>
    <label>SBU (Strategic Business Unit)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MainProduct__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NACM</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>FM</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>