force-app/main/default/objects/Opportunity/fields/Service_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Sub_Type__c</fullName>
    <description>RUBX-531 : Service Sub-Type for GS deals</description>
    <label>Service Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Finastra EE</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Fusion Blueprints</fullName>
            </value>
            <value>
                <fullName>NON Fusion Blueprints</fullName>
            </value>
            <value>
                <fullName>De-commission</fullName>
            </value>
            <value>
                <fullName>Core Development RA</fullName>
            </value>
            <value>
                <fullName>Non Core - FED / Toolkit</fullName>
            </value>
            <value>
                <fullName>Legacy migration data bucket</fullName>
            </value>
            <value>
                <fullName>24x5/7</fullName>
            </value>
            <value>
                <fullName>Ad-hoc support</fullName>
            </value>
            <value>
                <fullName>Onsite support</fullName>
            </value>
            <value>
                <fullName>Standby Support</fullName>
            </value>
            <value>
                <fullName>Support enablement trainings</fullName>
            </value>
            <value>
                <fullName>New Module</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Main Upgrade Project</fullName>
            </value>
            <value>
                <fullName>SWIFT Upgrade</fullName>
            </value>
            <value>
                <fullName>Upgrade &amp; New Module</fullName>
            </value>
            <value>
                <fullName>Upgrade &amp; New Product</fullName>
            </value>
            <value>
                <fullName>Client (DIY)</fullName>
            </value>
            <value>
                <fullName>Academy FCA</fullName>
            </value>
            <value>
                <fullName>Academy FCI</fullName>
            </value>
            <value>
                <fullName>Academy FCT</fullName>
            </value>
            <value>
                <fullName>Academy Public Training</fullName>
            </value>
            <value>
                <fullName>Academy Subscriptions</fullName>
            </value>
            <value>
                <fullName>Academy training</fullName>
            </value>
            <value>
                <fullName>Diamond Membership</fullName>
            </value>
            <value>
                <fullName>Platinum Membership</fullName>
            </value>
            <value>
                <fullName>Premium Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>