force-app/main/default/objects/Opportunity/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>RUBX-531 : Service Type for GS related deals.</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academy Training</fullName>
            </value>
            <value>
                <fullName>Additional Module / Functionality Implementation</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Customisation</fullName>
            </value>
            <value>
                <fullName>D&amp;H only</fullName>
            </value>
            <value>
                <fullName>Extended Support Services</fullName>
            </value>
            <value>
                <fullName>Fusion Adopt- Fusion Blueprints</fullName>
            </value>
            <value>
                <fullName>Fusion Adopt- Non Fusion Blueprints</fullName>
            </value>
            <value>
                <fullName>Fusion Advance</fullName>
            </value>
            <value>
                <fullName>Fusion Assure</fullName>
            </value>
            <value>
                <fullName>Fusion Knowledge Services (Academy)</fullName>
            </value>
            <value>
                <fullName>Fusion Optimize</fullName>
            </value>
            <value>
                <fullName>New Implementation Fusion Blueprints</fullName>
            </value>
            <value>
                <fullName>New Implementation NON Fusion Blueprints</fullName>
            </value>
            <value>
                <fullName>PSS Extended Support</fullName>
            </value>
            <value>
                <fullName>Upgrade - Fusion Advance Premium</fullName>
            </value>
            <value>
                <fullName>Upgrade Non Fusion Advance Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>