force-app/main/default/objects/Opportunity/fields/Shape_Fit_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Shape_Fit_Approval_Date__c</fullName>
    <description>RUBX-525 : Field to capture &quot;Shape Fit Approval date&quot;</description>
    <inlineHelpText>Populated by GSC once approval has been obtained via the review call</inlineHelpText>
    <label>Shape Fit Approval Date</label>
    <type>Date</type>
</CustomField>