force-app/main/default/objects/Opportunity/fields/Shape_Fit_Qualification_Request__c.field-meta.xml
<CustomField>
    <fullName>Shape_Fit_Qualification_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-525 : Field to capture &#39;Shape Fit Qualification Request&#39;</description>
    <label>Shape Fit Qualification Request</label>
    <type>Checkbox</type>
</CustomField>