force-app/main/default/objects/Opportunity/fields/Shape_Fit_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shape_Fit_Review_Notes__c</fullName>
    <description>RUBX-525 : Field to capture &quot;Shape Fit Review Notes&quot;</description>
    <inlineHelpText>Populated by GSC after review call is held</inlineHelpText>
    <label>Shape Fit Review Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>