force-app/main/default/objects/Opportunity/fields/Shape_Fit_Review_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Shape_Fit_Review_Request_Date__c</fullName>
    <description>RUBX-525 : Field to capture &quot;Shape Fit Review Request Date&quot;</description>
    <inlineHelpText>Please enter a date when &quot;Shape Fit Qualification Review&quot; field is checked - Date cannot be within 72 hours of the current time and Mondays &amp; Fridays should be excluded.</inlineHelpText>
    <label>Shape Fit Review Request Date</label>
    <type>Date</type>
</CustomField>