force-app/main/default/objects/Opportunity/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>RUBX-1672 : Lookup to capture Shipping Address for Opportunity</description>
    <inlineHelpText>Use this field to capture Shipping Address (must be associated with Opportunity&#39;s Account)</inlineHelpText>
    <label>Ship-To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an address associated with Opportunity&#39;s Account.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Address__c.Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Opportunities (Ship-To)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>