force-app/main/default/objects/Opportunity/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <description>RUBX-3907 : Refers city of address record selected as Ship-To</description>
    <formula>Ship_To__r.City__c</formula>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>