force-app/main/default/objects/Opportunity/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <description>RUBX-3907 : Refers country of address record selected as Ship-To</description>
    <formula>TEXT(Ship_To__r.Country__c)</formula>
    <label>Shipping Country</label>
    <type>Text</type>
</CustomField>