force-app/main/default/objects/Opportunity/fields/Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province__c</fullName>
    <description>RUBX-3907 : Refers State/Province of address record selected as Ship-To</description>
    <formula>Ship_To__r.State_Province__c</formula>
    <label>Shipping State/Province</label>
    <type>Text</type>
</CustomField>