force-app/main/default/objects/Opportunity/fields/Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street__c</fullName>
    <description>RUBX-3907 : Refers street name of address record selected as Ship-To</description>
    <formula>Ship_To__r.Street_Name__c</formula>
    <label>Shipping Street</label>
    <type>Text</type>
</CustomField>