force-app/main/default/objects/Opportunity/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <description>RUBX-512 : Field to capture sub region</description>
    <label>Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Regions</valueSetName>
    </valueSet>
</CustomField>