force-app/main/default/objects/Opportunity/fields/Term_Estimate_Months__c.field-meta.xml
<CustomField>
        <fullName>Term_Estimate_Months__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Old Help text - Entered by Sales Rep before it is Pearl Mastered. Term expressed in months.</description>
        <inlineHelpText>Enter minimum contract term estimate in months. Enter 0 for Perpetual license term.</inlineHelpText>
        <label>Term Estimate (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>