force-app/main/default/objects/Opportunity/recordTypes/Full.recordType-meta.xml
<RecordType>
    <fullName>Full</fullName>
    <active>true</active>
    <businessProcess>Finastra Sales Process</businessProcess>
    <description>RUBX-1467: Pipeline opportunity record type</description>
    <label>Full</label>
</RecordType>