force-app/main/default/objects/Opportunity/validationRules/Main_Competitor_Required_SS3.validationRule-meta.xml
<ValidationRule>
    <fullName>Main_Competitor_Required_SS3</fullName>
    <active>true</active>
    <description>RUBX-1543: Main Competitor is required before opportunity progress to SS4</description>
    <errorConditionFormula>AND (
NOT($Setup.Bypass_Validations__c.Disable__c),
ISPICKVAL(Main_Competitor__c, &quot;&quot;),
ISCHANGED(StageName),
ISPICKVAL(StageName, &quot;4. Develop&quot;),
OR(								ISPICKVAL(PRIORVALUE(StageName), &quot;1. Prospect&quot;),								ISPICKVAL(PRIORVALUE(StageName), &quot;2. Create&quot;),								ISPICKVAL(PRIORVALUE(StageName), &quot;3. Qualify&quot;)
))</errorConditionFormula>
    <errorDisplayField>Main_Competitor__c</errorDisplayField>
    <errorMessage>It is mandatory to update the main competitor on the opportunity in SS3</errorMessage>
</ValidationRule>